refactor: optimize images

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -9,8 +9,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
   <title>Coffee house</title>
-  <script type="module" crossorigin src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/main-VtGbTxbQ.js"></script>
-  <link rel="stylesheet" crossorigin href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/main-lsnvGztQ.css">
+  <script type="module" crossorigin src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/main-EDsof8hq.js"></script>
+  <link rel="stylesheet" crossorigin href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/main-ZY7kS8JU.css">
 </head>
 
 <body>
@@ -92,7 +92,7 @@
           </button>
           <div class="carousel__slide">
             <div class="item">
-              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-slider-1-Zi0XYhzW.png" alt="S'mores Frappuccino">
+              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-slider-1-pBriol0v.webp" alt="S'mores Frappuccino">
               <div class="item__info">
                 <h3 class="heading-3">S'mores Frappuccino</h3>
                 <p>This new drink takes an espresso and mixes it with brown sugar
@@ -125,13 +125,13 @@
           friends, or get some work done.</h2>
 
         <div class="gallery">
-          <figure class="gallery__item gallery__item--1"><img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/about-1-vA9hzbFI.jpeg"
+          <figure class="gallery__item gallery__item--1"><img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/about-1-EQixwI3U.webp"
               alt="a woman drinking coffee in a cafe"></figure>
-          <figure class="gallery__item gallery__item--2"><img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/about-2-BzfBZTyP.jpeg"
+          <figure class="gallery__item gallery__item--2"><img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/about-2-4XdMQ9Ko.webp"
               alt="a man working on a laptop with coffee"></figure>
-          <figure class="gallery__item gallery__item--3"><img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/about-3-JNKRGuSC.jpeg" alt="a cup of coffee">
+          <figure class="gallery__item gallery__item--3"><img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/about-3-cBF6-ot0.webp" alt="a cup of coffee">
           </figure>
-          <figure class="gallery__item gallery__item--4"><img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/about-4-jknXV_ZK.jpeg"
+          <figure class="gallery__item gallery__item--4"><img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/about-4-jVzhz-DQ.webp"
               alt="a couple drinking coffee"></figure>
         </div>
       </div>
@@ -162,7 +162,7 @@
           </div>
         </div>
         <div class="mobile-app__img-box">
-          <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/mobile-screens-1YNBfEWe.png" alt="mobile app" class="mobile-app__img">
+          <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/mobile-screens-KXBPRl2E.webp" alt="mobile app" class="mobile-app__img">
         </div>
       </div>
     </section>
