--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -9,8 +9,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
   <title>Coffee house | Menu</title>
-  <script type="module" crossorigin src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/main-VtGbTxbQ.js"></script>
-  <link rel="stylesheet" crossorigin href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/main-lsnvGztQ.css">
+  <script type="module" crossorigin src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/main-EDsof8hq.js"></script>
+  <link rel="stylesheet" crossorigin href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/main-ZY7kS8JU.css">
 </head>
 
 <body>
@@ -83,7 +83,7 @@
         <div class="menu__items">
           <article class="card">
             <div class="card__img-box">
-              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-1-7aHFsAq4.jpeg" alt="Irish coffee">
+              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-1-CzUp8fA7.webp" alt="Irish coffee">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Irish coffee</h3>
@@ -94,7 +94,7 @@
 
           <article class="card">
             <div class="card__img-box">
-              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-2-7fa0lRbb.jpeg" alt="Kahlua coffee">
+              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-2-Bl8hoDn6.webp" alt="Kahlua coffee">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Kahlua coffee</h3>
@@ -105,7 +105,7 @@
 
           <article class="card">
             <div class="card__img-box">
-              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-3-GQvytrBK.jpeg" alt="Honey raf">
+              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-3-8sTxJRcT.webp" alt="Honey raf">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Honey raf</h3>
@@ -116,7 +116,7 @@
 
           <article class="card">
             <div class="card__img-box">
-              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-4-c52uHXsS.jpeg" alt="Ice cappuccino">
+              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-4-ASDaDsqS.webp" alt="Ice cappuccino">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Ice cappuccino</h3>
@@ -127,7 +127,7 @@
 
           <article class="card">
             <div class="card__img-box">
-              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-5-_21qtKFN.jpeg" alt="Espresso">
+              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-5-OpxFalos.webp" alt="Espresso">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Espresso</h3>
@@ -138,7 +138,7 @@
 
           <article class="card">
             <div class="card__img-box">
-              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-6-29yfKNVj.jpeg" alt="Latte">
+              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-6-1-wOBLP8.webp" alt="Latte">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Latte</h3>
@@ -149,7 +149,7 @@
 
           <article class="card">
             <div class="card__img-box">
-              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-7-bXQOhubq.jpeg" alt="Latte macchiato">
+              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-7-Sm4S2HcM.webp" alt="Latte macchiato">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Latte macchiato</h3>
@@ -160,7 +160,7 @@
 
           <article class="card">
             <div class="card__img-box">
-              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-8-gasqJPW6.jpeg" alt="Coffee with cognac">
+              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-8-HX3KaNmX.webp" alt="Coffee with cognac">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Coffee with cognac</h3>
