--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -62,6 +62,14 @@
     <section class="hero-section" id="hero">
       <div class="container">
         <div class="hero">
+
+          <div class="bg-video">
+            <video class="bg-video__content" autoplay muted loop>
+              <source src="src/video/coffee-video.mp4" type="video/mp4">
+              <source src="src/video/coffee-video.webm" type="video/webm">
+              <source>
+            </video>
+          </div>
           <div class="hero__info">
             <h1 class="hero__title heading-1"><span class="text-accent">Enjoy</span> premium coffee at our charming cafe
             </h1>
