--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -9,8 +9,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
   <title>Coffee house</title>
-  <script type="module" crossorigin src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/main-EDsof8hq.js"></script>
-  <link rel="stylesheet" crossorigin href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/main-ZY7kS8JU.css">
+  <script type="module" crossorigin src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/main-h9vPFqxO.js"></script>
+  <link rel="stylesheet" crossorigin href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/main-X4unm7Xl.css">
 </head>
 
 <body>
@@ -62,6 +62,14 @@
     <section class="hero-section" id="hero">
       <div class="container">
         <div class="hero">
+
+          <div class="bg-video">
+            <video class="bg-video__content" autoplay muted loop>
+              <source src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-video-UQRjrHh9.mp4" type="video/mp4">
+              <source src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-video-YxOTduci.webm" type="video/webm">
+              <source>
+            </video>
+          </div>
           <div class="hero__info">
             <h1 class="hero__title heading-1"><span class="text-accent">Enjoy</span> premium coffee at our charming cafe
             </h1>
