--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -9,7 +9,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
-  <script type="module" src="src/main.js"></script>
+  <!-- <script type="module" src="src/main.js"></script> -->
+  <script type="module" src="src/js/controller.js"></script>
   <title>Coffee house</title>
 </head>
 
