refactor: create modal view

--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -9,8 +9,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
-  <script type="module" src="src/main.js"></script>
-  <script type="module" src="src/menu.js"></script>
+  <script type="module" src="src/js/controller.js"></script>
+  <script type="module" src="src/js/menu-controller.js"></script>
   <title>Coffee house | Menu</title>
 </head>
 
@@ -179,6 +179,7 @@
       </div>
     </section>
   </main>
+
   <dialog class="dialog">
     <form method="dialog" class="dialog__form">
       <div class="dialog__content"></div>
