feat: render menu items

--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -82,8 +82,8 @@
         </div>
 
         <div class="menu__items">
-          <article class="card" data-name="Irish coffee">
-            <div class="card__img-box">
+          <!-- <article class="card" data-name="Irish coffee" id="coffee-1">
+            <div class=" card__img-box">
               <img src="src/imgs/coffee-1.webp" alt="Irish coffee">
             </div>
             <div class="card__info">
@@ -175,8 +175,8 @@
           <svg>
             <use href="src/imgs/sprite.svg#refresh"></use>
           </svg>
-        </button>
-      </div>
+        </button> -->
+        </div>
     </section>
   </main>
 
