feat: create menu tabs view

--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -68,14 +68,17 @@
         </h1>
 
         <div class="menu__tabs">
-          <button class="btn-tab btn-tab--active">
+          <button class="btn-tab btn-tab--active" data-category="coffee">
             <img src="src/imgs/hot-beverage.svg" alt="coffee emoji">
             <span>Coffee</span>
           </button>
-          <button class="btn-tab">
+
+          <button class="btn-tab" data-category="tea">
             <img src="src/imgs/teapot.svg" alt="teapot emoji">
             <span>Tea</span>
-          </button><button class="btn-tab">
+          </button>
+
+          <button class="btn-tab" data-category="dessert">
             <img src="src/imgs/dessert.svg" alt="dessert emoji">
             <span>Dessert</span>
           </button>
