feat: create refresh menu view

--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -171,15 +171,14 @@
               <p class="card__description">Fragrant black coffee with cognac and whipped cream</p>
               <p class="card__price heading-3">$6.50</p>
             </div>
-          </article>
+          </article> -->
         </div>
 
-        <button class="btn-icon">
-          <svg>
-            <use href="src/imgs/sprite.svg#refresh"></use>
-          </svg>
-        </button> -->
+        <div class="menu__load">
+
         </div>
+      </div>
+
     </section>
   </main>
 
