fix: hide mobile navigation on clicking on no-ineractive links

--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -38,7 +38,7 @@
           </li>
 
           <li class="nav__item nav__item--menu">
-            <a class="menu-link menu-link--active" href="menu.html">
+            <a class="menu-link menu-link--active" href="#">
               <span>Menu</span>
               <svg>
                 <use href="src/imgs/sprite.svg#coffee-cup"></use>
@@ -48,7 +48,7 @@
         </ul>
       </nav>
 
-      <a class="menu-link nav__link menu-link--active" href="menu.html">
+      <a class="menu-link nav__link menu-link--active" href="#">
         <span>Menu</span>
         <svg>
           <use href="src/imgs/sprite.svg#coffee-cup"></use>
