--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -10,6 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
   <script type="module" src="src/js/controller.js"></script>
+  <script type="module" src="src/js/home-controller.js"></script>
   <title>Coffee house</title>
 </head>
 
@@ -92,30 +93,61 @@
     <section class="favorites-section" id="favorites">
       <div class="favorites container">
         <h2 class="favorites__title heading-2">Choose your <span class="text-accent">favorite</span> coffee</h2>
+
         <div class="carousel">
-          <button class="btn-icon carousel__btn carousel__btn--prev">
+          <button class="btn-icon carousel__btn" data-direction="prev">
             <svg>
               <use href="src/imgs/sprite.svg#arrow-left"></use>
             </svg>
           </button>
-          <div class="carousel__slide">
-            <div class="item">
-              <img src="src/imgs/coffee-slider-1.webp" alt="S'mores Frappuccino">
-              <div class="item__info">
-                <h3 class="heading-3">S'mores Frappuccino</h3>
-                <p>This new drink takes an espresso and mixes it with brown sugar
-                  and cinnamon
-                  before being topped with oat milk.</p>
-                <p class="heading-3">$5.50</p>
+
+          <div class="carousel__window">
+            <div class="carousel__inner">
+              <div class="carousel__slide">
+                <div class="item">
+                  <img src="src/imgs/coffee-slider-1.webp" alt="S'mores Frappuccino">
+                  <div class="item__info">
+                    <h3 class="heading-3">S'mores Frappuccino</h3>
+                    <p>This new drink takes an espresso and mixes it with brown sugar
+                      and cinnamon
+                      before being topped with oat milk.</p>
+                    <p class="heading-3">$5.50</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="carousel__slide">
+                <div class="item">
+                  <img src="src/imgs/coffee-slider-2.webp" alt="Caramel Macchiato">
+                  <div class="item__info">
+                    <h3 class="heading-3">Caramel Macchiato</h3>
+                    <p>Fragrant and unique classic espresso with rich caramel-peanut syrup, with cream under whipped
+                      thick foam.</p>
+                    <p class="heading-3">$5.50</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="carousel__slide">
+                <div class="item">
+                  <img src="src/imgs/coffee-slider-3.webp" alt="S'mores Frappuccino">
+                  <div class="item__info">
+                    <h3 class="heading-3">Ice coffee</h3>
+                    <p>A popular summer drink that tones and invigorates. Prepared from coffee, milk and ice.</p>
+                    <p class="heading-3">$5.50</p>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
-          <button class="btn-icon carousel__btn carousel__btn--next">
+
+          <button class="btn-icon carousel__btn" data-direction="next">
             <svg>
               <use href="src/imgs/sprite.svg#arrow-right"></use>
             </svg>
           </button>
         </div>
+
         <div class="carousel__bars">
           <div class="carousel__bar carousel__bar--active"></div>
           <div class="carousel__bar"></div>
@@ -235,7 +267,6 @@
       </div>
     </div>
   </footer>
-
 </body>
 
 </html>
