feat: pause animation on hover

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -149,9 +149,9 @@
         </div>
 
         <div class="carousel__bars">
-          <div class="carousel__bar carousel__bar--active"></div>
-          <div class="carousel__bar"></div>
-          <div class="carousel__bar"></div>
+          <div class="carousel__bar carousel__bar--active"><span></span></div>
+          <div class="carousel__bar"><span></span></div>
+          <div class="carousel__bar"><span></span></div>
         </div>
       </div>
     </section>
